--- a/src/views/GameView.css
+++ b/src/views/GameView.css
@@ -10,3 +10,8 @@
 .swiper-vue-container{
     
 }
+
+.card-selector-action{
+    z-index: 100;
+    background-color: var(--background-color);;
+}
